@@ -1,3 +1,9 @@
+2010-05-31  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* disk/i386/pc/biosdisk.c (grub_biosdisk_open): Use
+	GRUB_DISK_SIZE_UNKNOWN.
+	* disk/ieee1275/ofdisk.c (grub_ofdisk_open): Likewise.
+
 2010-05-31  Jiro SEKIBA <jir@unicus.jp>
 
 	* include/grub/disk.h (GRUB_DISK_SIZE_UNKNOWN): New macro.
